[gd_scene load_steps=40 format=3 uid="uid://ds52k3x1j8fvo"]

[ext_resource type="Shader" uid="uid://cousxnpar5cua" path="res://shaders/level.gdshader" id="1_8cye3"]
[ext_resource type="PackedScene" uid="uid://e0lmnsgvoln4" path="res://scenes/entities/player.tscn" id="1_vonw3"]
[ext_resource type="Script" uid="uid://c1lf2w74abeu1" path="res://scripts/level.gd" id="2_aicyk"]
[ext_resource type="PackedScene" uid="uid://cndnoly72gxh6" path="res://scenes/pausemenu.tscn" id="2_kih21"]
[ext_resource type="PackedScene" uid="uid://crr7wd058gblm" path="res://scenes/blocks/qblock.tscn" id="2_oi3di"]
[ext_resource type="PackedScene" uid="uid://u3rxnc0qfoau" path="res://scenes/HUD.tscn" id="2_wu01b"]
[ext_resource type="PackedScene" uid="uid://di71jqagsmnai" path="res://scenes/blocks/qblock_mushroom.tscn" id="3_0b4ue"]
[ext_resource type="Shader" uid="uid://dha41nql3qnc3" path="res://shaders/PaletteSwap.gdshader" id="3_2e2fo"]
[ext_resource type="Texture2D" uid="uid://g5fdvo73o3ou" path="res://images/palettes/tilePalette.png" id="3_i2t4f"]
[ext_resource type="PackedScene" uid="uid://tesmv1yomxnl" path="res://scenes/blocks/brickBlock.tscn" id="4_f2txt"]
[ext_resource type="Texture2D" uid="uid://bkx3a688qm0n5" path="res://images/tiles.png" id="7_8cye3"]
[ext_resource type="PackedScene" uid="uid://7yjgj2bujgeg" path="res://scenes/blocks/hiddenBlock.tscn" id="7_gur6y"]
[ext_resource type="PackedScene" uid="uid://sdens1bta7y4" path="res://scenes/blocks/pipe.tscn" id="9_arp2o"]
[ext_resource type="PackedScene" uid="uid://dtw8ydupe7kjo" path="res://scenes/blocks/brickBlock10Coin.tscn" id="10_arp2o"]
[ext_resource type="PackedScene" uid="uid://bn8fnjkh4p5xh" path="res://scenes/blocks/brickBlockMushroom.tscn" id="10_ux5qa"]
[ext_resource type="Script" uid="uid://cpbm10o4slycl" path="res://scripts/level_read.gd" id="10_wc255"]
[ext_resource type="PackedScene" uid="uid://bypbsaos681uo" path="res://scenes/blocks/pipeLeft.tscn" id="11_82cfe"]
[ext_resource type="PackedScene" uid="uid://1nl3h0tmxqmu" path="res://scenes/blocks/brickBlockStar.tscn" id="12_gunhw"]
[ext_resource type="PackedScene" uid="uid://k2r703mpq3t8" path="res://scenes/blocks/coin.tscn" id="13_5k0ak"]
[ext_resource type="PackedScene" uid="uid://dchtemg20llqb" path="res://scenes/flagpole.tscn" id="13_64w2a"]
[ext_resource type="AudioStream" uid="uid://w5eiy3dtll1c" path="res://audio/music/goalpole.mp3" id="14_fpun6"]
[ext_resource type="PackedScene" uid="uid://bkj8j3l7j6u33" path="res://scenes/entities/goomb.tscn" id="15_wc255"]
[ext_resource type="PackedScene" uid="uid://vewa2fpvxbge" path="res://scenes/entities/firebar.tscn" id="21_h6wmr"]
[ext_resource type="PackedScene" uid="uid://buaocyjfxqq3" path="res://scenes/entities/firebarcounter.tscn" id="22_pqd0y"]
[ext_resource type="PackedScene" uid="uid://cdexvmfu6tdli" path="res://scenes/entities/bowser.tscn" id="25_3ies3"]
[ext_resource type="PackedScene" uid="uid://ddu3d3l0d2xxe" path="res://scenes/entities/koopa-green.tscn" id="26_xy2fk"]
[ext_resource type="PackedScene" uid="uid://cbakr6xm68j4r" path="res://scenes/entities/piranha-plant.tscn" id="28_v3why"]
[ext_resource type="PackedScene" uid="uid://g0ngj3ah0fex" path="res://scenes/entities/koopa-red.tscn" id="30_2e2fo"]
[ext_resource type="AudioStream" uid="uid://cry15fmrwg25v" path="res://music.tres" id="30_kih21"]
[ext_resource type="AudioStream" uid="uid://rp7d3q01hibi" path="res://audio/pause.mp3" id="31_w3o6u"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_gur6y"]
shader = ExtResource("3_2e2fo")
shader_parameter/palette = ExtResource("3_i2t4f")
shader_parameter/accessRow = 1

[sub_resource type="TileMapPattern" id="TileMapPattern_wc255"]
tile_data = PackedInt32Array(0, 131075, 4, 1, 196611, 4, 2, 196611, 4, 3, 262147, 4)

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_aicyk"]
texture = ExtResource("7_8cye3")
0:0/0 = 0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:0/0 = 0
1:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
6:0/0 = 0
6:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
7:0/0 = 0
7:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
8:0/0 = 0
8:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
0:1/0 = 0
0:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:1/0 = 0
1:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:1/0 = 0
2:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
6:1/0 = 0
7:1/0 = 0
7:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 0, -8, -0.0267353)
8:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
6:2/0 = 0
7:2/0 = 0
8:2/0 = 0
8:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
0:3/0 = 0
0:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:3/0 = 0
1:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:3/0/custom_data_0 = 1
2:3/0 = 0
2:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:3/0/custom_data_0 = 1
3:3/0 = 0
3:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:3/0/custom_data_0 = 1
4:3/0 = 0
4:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
4:3/0/custom_data_0 = 1
5:3/0 = 0
5:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
5:3/0/custom_data_0 = 1
6:3/0 = 0
6:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
6:3/0/custom_data_0 = 1
7:3/0 = 0
7:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
7:3/0/custom_data_0 = 1
8:3/0 = 0
8:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
8:3/0/custom_data_0 = 1
0:4/0 = 0
0:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
0:4/0/custom_data_0 = 1
1:4/0 = 0
1:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:4/0/custom_data_0 = 1
2:4/0 = 0
2:4/0/custom_data_0 = 1
3:4/0 = 0
3:4/0/custom_data_0 = 1
4:4/0 = 0
4:4/0/custom_data_0 = 1
5:4/0 = 0
5:4/0/custom_data_0 = 1
6:4/0 = 0
6:4/0/custom_data_0 = 1
7:4/0 = 0
7:4/0/custom_data_0 = 1
8:4/0 = 0
8:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
8:4/0/custom_data_0 = 1
0:5/0 = 0
0:5/0/custom_data_0 = 1
1:5/0 = 0
1:5/0/custom_data_0 = 1
2:5/0 = 0
2:5/0/custom_data_0 = 1
3:5/0 = 0
3:5/0/custom_data_0 = 1
4:5/0 = 0
4:5/0/custom_data_0 = 1
5:5/0 = 0
5:5/0/custom_data_0 = 1
6:5/0 = 0
6:5/0/custom_data_0 = 1
7:5/0 = 0
7:5/0/custom_data_0 = 1
8:5/0 = 0
8:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
8:5/0/custom_data_0 = 1
0:6/0 = 0
0:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
0:6/0/custom_data_0 = 1
1:6/0 = 0
1:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:6/0/custom_data_0 = 1
2:6/0 = 0
2:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:6/0/custom_data_0 = 1
3:6/0 = 0
3:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:6/0/custom_data_0 = 1
4:6/0 = 0
4:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
4:6/0/custom_data_0 = 1
5:6/0 = 0
5:6/0/custom_data_0 = 1
6:6/0 = 0
6:6/0/custom_data_0 = 1
7:6/0 = 0
7:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
8:6/0 = 0
0:7/0 = 0
1:7/0 = 0
2:7/0 = 0
3:7/0 = 0
4:7/0 = 0
5:7/0 = 0
6:7/0 = 0
7:7/0 = 0
7:7/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
8:7/0 = 0
8:7/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)

[sub_resource type="TileSetScenesCollectionSource" id="TileSetScenesCollectionSource_0b4ue"]
scenes/1/scene = ExtResource("2_oi3di")
scenes/2/scene = ExtResource("3_0b4ue")
scenes/3/scene = ExtResource("4_f2txt")
scenes/4/scene = ExtResource("10_arp2o")
scenes/5/scene = ExtResource("9_arp2o")
scenes/6/scene = ExtResource("10_ux5qa")
scenes/7/scene = ExtResource("11_82cfe")
scenes/8/scene = ExtResource("12_gunhw")
scenes/9/scene = ExtResource("13_5k0ak")
scenes/10/scene = ExtResource("7_gur6y")

[sub_resource type="TileSet" id="TileSet_oi3di"]
physics_layer_0/collision_layer = 4294967295
custom_data_layer_0/name = "Palette"
custom_data_layer_0/type = 2
sources/1 = SubResource("TileSetScenesCollectionSource_0b4ue")
sources/0 = SubResource("TileSetAtlasSource_aicyk")
pattern_0 = SubResource("TileMapPattern_wc255")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_aicyk"]
shader = ExtResource("1_8cye3")

[sub_resource type="TileSetScenesCollectionSource" id="TileSetScenesCollectionSource_arp2o"]
resource_name = "Enemies"
scenes/1/scene = ExtResource("15_wc255")
scenes/2/scene = ExtResource("21_h6wmr")
scenes/3/scene = ExtResource("22_pqd0y")
scenes/4/scene = ExtResource("25_3ies3")
scenes/5/scene = ExtResource("26_xy2fk")
scenes/6/scene = ExtResource("30_2e2fo")
scenes/7/scene = ExtResource("28_v3why")

[sub_resource type="TileSet" id="TileSet_ux5qa"]
tile_size = Vector2i(8, 16)
sources/0 = SubResource("TileSetScenesCollectionSource_arp2o")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_arp2o"]
size = Vector2(10, 20)

[node name="Node2D" type="Node2D"]
script = ExtResource("2_aicyk")

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = -128

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
z_index = -4096
z_as_relative = false
offset_right = 2301.0
offset_bottom = 2430.0
color = Color(0, 0, 0, 1)

[node name="Control" parent="CanvasLayer" instance=ExtResource("2_wu01b")]

[node name="TileMapLayer" type="TileMapLayer" parent="."]
texture_filter = 1
material = SubResource("ShaderMaterial_gur6y")
tile_set = SubResource("TileSet_oi3di")
script = ExtResource("10_wc255")
metadata/groundPalette = 0
metadata/pipePalette = 0
metadata/cloudPalette = 0

[node name="Area2D" parent="." instance=ExtResource("13_64w2a")]
position = Vector2(-61, 62)

[node name="Mario" parent="." instance=ExtResource("1_vonw3")]
material = SubResource("ShaderMaterial_aicyk")
use_parent_material = true
position = Vector2(63, 83)

[node name="GoalMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource("14_fpun6")
volume_db = -5.0
playback_type = 1

[node name="TileMapLayer2" type="TileMapLayer" parent="."]
position = Vector2(4, 0)
tile_set = SubResource("TileSet_ux5qa")

[node name="StaticBody2D" type="StaticBody2D" parent="."]
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(-5, 0)
shape = SubResource("RectangleShape2D_arp2o")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(128, 120)
zoom = Vector2(3, 3)
limit_left = 0
limit_top = 0
limit_right = 4096
limit_bottom = 256

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("31_w3o6u")
volume_db = -5.0

[node name="CanvasLayer2" type="CanvasLayer" parent="."]

[node name="PauseMenu" parent="CanvasLayer2" instance=ExtResource("2_kih21")]
visible = false

[node name="BGM" type="AudioStreamPlayer" parent="."]
stream = ExtResource("30_kih21")

[connection signal="goal_pole" from="Mario" to="." method="_on_mario_goal_pole"]
[connection signal="finished" from="GoalMusic" to="." method="_on_goal_music_finished"]
